--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
+# Framework web y dependencias
 Flask==3.0.2
-Pillow==10.2.0
-pyTelegramBotAPI==4.15.4
-qrcode==7.4.2
-gunicorn==21.2.0
-python-dotenv==1.0.1
-requests==2.31.0
 Werkzeug==3.0.1
+Jinja2==3.1.3
 click==8.1.7
 itsdangerous==2.1.2
-Jinja2==3.1.3
 MarkupSafe==2.1.5
+
+# Base de datos
+pymongo==4.6.1
+
+# Manejo de variables de entorno
+python-dotenv==1.0.1
+
+# Utilidades
+datetime
+python-json-logger==2.0.7
+requests==2.31.0
+
+# Bot de Telegram y QR
+pyTelegramBotAPI==4.15.4
+qrcode==7.4.2
+Pillow==10.2.0
 pypng==0.20220715.0
-pymongo[srv]==4.6.1
+
+# Servidor
+gunicorn==21.2.0
 psutil==5.9.8
