--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ MarkupSafe==2.1.5
 pymongo==4.6.1
 
 # Manejo de variables de entorno
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 
 # Utilidades
 datetime
@@ -18,14 +18,11 @@ python-json-logger==2.0.7
 requests==2.31.0
 
 # Bot de Telegram y QR
-pyTelegramBotAPI==4.14.1
-qrcode==7.3
-Pillow==10.2.0
+pyTelegramBotAPI==4.14.0
+qrcode==7.4.2
+pillow==10.2.0
 pypng==0.20220715.0
 
 # Servidor
 gunicorn==21.2.0
 psutil==5.9.8
-
-# Additional dependencies
-uuid==1.30
